syntax = "proto3";

package com.simple.db.proto;

import "google/protobuf/timestamp.proto";

message ErrorModel {
  optional string error = 1;
  optional string fieldName = 2;
  optional string message = 3;
}

message ErrorResponseModel {
  optional string status = 1;
  optional google.protobuf.Timestamp timestamp = 2;
  optional ErrorCode code = 3;
  repeated ErrorModel errorMessage = 4;
}

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_INTERNAL_ERROR = 1;
  ERROR_CODE_VALIDATION_ERROR = 2;
  ERROR_CODE_NOT_FOUND = 3;
  ERROR_CODE_CONFLICT = 4;
  ERROR_CODE_UNAUTHORIZED = 5;
  ERROR_CODE_FORBIDDEN = 6;
  ERROR_CODE_BAD_REQUEST = 7;
  ERROR_CODE_UNKNOWN_ERROR = 8;
}